--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li>
-            <a data-toggle="modal" data-target="#loginModal">
+            <a id="loginButton">
               <span class="glyphicon glyphicon-log-in"></span>
               Login
             </a>
@@ -244,7 +244,7 @@
               </div>
               <div class="col-xs-12 col-sm-2">
                 <p style="padding:40px;"></p>
-                <a href="#" class="btn btn-warning btn-block" data-toggle="modal" data-target="#reserveModal">Reserve Table</a>
+                <a id="reserveButton" class="btn btn-warning btn-block">Reserve Table</a>
               </div>
           </div>
       </div>
@@ -489,6 +489,12 @@
       });
       $("#carousel-play").click(function(){
         $("#mycarousel").carousel('cycle');
+      });
+      $("#loginButton").click(function(){
+        $("#loginModal").modal('toggle');
+      });
+      $("#reserveButton").click(function(){
+        $("#reserveModal").modal('toggle');
       });
     });
    </script>
